--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="nav">
         <ul class="nav-list list">
           <li class="nav-list-item">
-            <a href="./index.html" class="nav-list-link link">Studio</a>
+            <a href="./index.html" class="nav-list-link link current">Studio</a>
           </li>
           <li class="nav-list-item">
             <a href="./portfolio.html" class="nav-list-link link">Portfolio</a>
@@ -52,8 +52,8 @@
       </section>
 
       <!----------------------------------- advances ----------------------------------------->
-      <section advances-section>
-        <h2 hidden>Why our webstudio is the best</h2>
+      <section class="advances-section">
+        <h2 class="visually-hidden">Why our webstudio is the best</h2>
         <ul class="advances-section-list list">
           <li class="advances-section-list-item">
             <h3 class="advances-section-list-item-slogan">Strategy</h3>
@@ -147,7 +147,7 @@
 
     <!----------------------------------------- footer ----------------------------------------->
     <footer class="footer">
-      <h2 hidden>Call to action</h2>
+      <h2 class="visually-hidden">Call to action</h2>
       <a href="./index.html" class="link footer-logo"
         ><span class="logo-item">web</span
         ><span class="footer-logo-syllable-secondary">studio</span></a
