--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <a href="./index.html" class="nav-list-link link">Studio</a>
           </li>
           <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-list-link link">Portfolio</a>
+            <a href="./portfolio.html" class="nav-list-link link current">Portfolio</a>
           </li>
           <li class="nav-list-item">
             <a href="" class="nav-list-link link">Contacts</a>
@@ -45,89 +45,101 @@
     </header>
 
     <main>
-      <!--------------------------------------- filter ---------------------------------------->
-      <h1 hidden>Our services</h1>
-      <ul class="filter-list list">
-        <li><button type="button" class="filter-list-btn pointer">All</button></li>
-        <li><button type="button" class="filter-list-btn pointer">Web Site</button></li>
-        <li><button type="button" class="filter-list-btn pointer">App</button></li>
-        <li><button type="button" class="filter-list-btn pointer">Design</button></li>
-        <li><button type="button" class="filter-list-btn pointer">Marketing</button></li>
-      </ul>
+      <section>
+        <!--------------------------------------- filter ---------------------------------------->
+        <h1 class="visually-hidden">Our services</h1>
+        <ul class="filter-list list">
+          <li><button type="button" class="filter-list-btn pointer">All</button></li>
+          <li><button type="button" class="filter-list-btn pointer">Web Site</button></li>
+          <li><button type="button" class="filter-list-btn pointer">App</button></li>
+          <li><button type="button" class="filter-list-btn pointer">Design</button></li>
+          <li><button type="button" class="filter-list-btn pointer">Marketing</button></li>
+        </ul>
 
-      <!--------------------------------------- examples ---------------------------------------->
-      <h2 hidden>Examples</h2>
-      <ul class="examples-list list">
-        <li class="examples-list-item"
-          ><img
-            src="./img-potrfolio/example-1.jpg"
-            alt="Banking App Interface Concept"
-            width="360"
-            height="300"
-          />
-          <h3 class="examples-list-item-title">Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li class="examples-list-item"
-          ><img
-            src="./img-potrfolio/example-2.jpg"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h3 class="examples-list-item-title">Cashless Payment</h3>
-          <p class="examples-list-item-text">Marketing</p>
-        </li>
-        <li class="examples-list-item"
-          ><img src="./img-potrfolio/example-3.jpg" alt="Meditaion App" width="360" height="300" />
-          <h3 class="examples-list-item-title">Meditaion App</h3>
-          <p class="examples-list-item-text">App</p>
-        </li>
-        <li class="examples-list-item"
-          ><img src="./img-potrfolio/example-4.jpg" alt="Taxi Service" width="360" height="300" />
-          <h3 class="examples-list-item-title">Taxi Service</h3>
-          <p class="examples-list-item-text">Marketing</p>
-        </li>
-        <li class="examples-list-item"
-          ><img
-            src="./img-potrfolio/example-5.jpg"
-            alt="Screen Illustrations"
-            width="360"
-            height="300"
-          />
-          <h3 class="examples-list-item-title">Screen Illustrations</h3>
-          <p class="examples-list-item-text">Design</p>
-        </li>
-        <li class="examples-list-item"
-          ><img src="./img-potrfolio/example-6.jpg" alt="Online Courses" width="360" height="300" />
-          <h3 class="examples-list-item-title">Online Courses</h3>
-          <p class="examples-list-item-text">Marketing</p>
-        </li>
-        <li class="examples-list-item"
-          ><img
-            src="./img-potrfolio/example-7.jpg"
-            alt="Instagram Stories Concept"
-            width="360"
-            height="300"
-          />
-          <h3 class="examples-list-item-title">Instagram Stories Concept</h3>
-          <p class="examples-list-item-text">Design</p>
-        </li>
-        <li class="examples-list-item"
-          ><img src="./img-potrfolio/example-8.jpg" alt="Organic Food" width="360" height="300" />
-          <h3 class="examples-list-item-title">Organic Food</h3>
-          <p class="examples-list-item-text">Web Site</p>
-        </li>
-        <li class="examples-list-item"
-          ><img src="./img-potrfolio/example-9.jpg" alt="Fresh Coffee" width="360" height="300" />
-          <h3 class="examples-list-item-title">Fresh Coffee</h3>
-          <p class="examples-list-item-text">Web Site</p>
-        </li>
-      </ul>
+        <!--------------------------------------- examples ---------------------------------------->
+        <h2 class="visually-hidden">Examples</h2>
+        <ul class="examples-list list">
+          <li class="examples-list-item"
+            ><img
+              src="./img-potrfolio/example-1.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+              height="300"
+            />
+            <h3 class="examples-list-item-title">Banking App Interface Concept</h3>
+            <p class="examples-list-item-text">App</p>
+          </li>
+          <li class="examples-list-item"
+            ><img
+              src="./img-potrfolio/example-2.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="examples-list-item-title">Cashless Payment</h3>
+            <p class="examples-list-item-text">Marketing</p>
+          </li>
+          <li class="examples-list-item"
+            ><img
+              src="./img-potrfolio/example-3.jpg"
+              alt="Meditaion App"
+              width="360"
+              height="300"
+            />
+            <h3 class="examples-list-item-title">Meditaion App</h3>
+            <p class="examples-list-item-text">App</p>
+          </li>
+          <li class="examples-list-item"
+            ><img src="./img-potrfolio/example-4.jpg" alt="Taxi Service" width="360" height="300" />
+            <h3 class="examples-list-item-title">Taxi Service</h3>
+            <p class="examples-list-item-text">Marketing</p>
+          </li>
+          <li class="examples-list-item"
+            ><img
+              src="./img-potrfolio/example-5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="examples-list-item-title">Screen Illustrations</h3>
+            <p class="examples-list-item-text">Design</p>
+          </li>
+          <li class="examples-list-item"
+            ><img
+              src="./img-potrfolio/example-6.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="examples-list-item-title">Online Courses</h3>
+            <p class="examples-list-item-text">Marketing</p>
+          </li>
+          <li class="examples-list-item"
+            ><img
+              src="./img-potrfolio/example-7.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              height="300"
+            />
+            <h3 class="examples-list-item-title">Instagram Stories Concept</h3>
+            <p class="examples-list-item-text">Design</p>
+          </li>
+          <li class="examples-list-item"
+            ><img src="./img-potrfolio/example-8.jpg" alt="Organic Food" width="360" height="300" />
+            <h3 class="examples-list-item-title">Organic Food</h3>
+            <p class="examples-list-item-text">Web Site</p>
+          </li>
+          <li class="examples-list-item"
+            ><img src="./img-potrfolio/example-9.jpg" alt="Fresh Coffee" width="360" height="300" />
+            <h3 class="examples-list-item-title">Fresh Coffee</h3>
+            <p class="examples-list-item-text">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- -------------------------------------- footer ------------------------------------------>
     <footer class="footer">
-      <h2 hidden>Call to action</h2>
+      <h2 class="visually-hidden">Call to action</h2>
       <a href="./index.html" class="link footer-logo"
         ><span class="logo-item">web</span
         ><span class="footer-logo-syllable-secondary">studio</span></a
