--- a/index.html
+++ b/index.html
@@ -45,40 +45,40 @@
     </header>
 
     <main>
-      <!--------------------------------- hero-section -------------------------------------->
-      <section class="hero-section">
+      <!------------------------------------- hero ----------------------------------------->
+      <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-btn pointer">Order service</button>
       </section>
 
-      <!----------------------------------- advances ----------------------------------------->
-      <section class="advances-section">
+      <!----------------------------------- advantages ----------------------------------------->
+      <section class="advantages-section">
         <h2 class="visually-hidden">Why our webstudio is the best</h2>
-        <ul class="advances-section-list list">
-          <li class="advances-section-list-item">
-            <h3 class="advances-section-list-item-slogan">Strategy</h3>
-            <p class="advances-section-list-item-text">
+        <ul class="advantages-list list">
+          <li class="advantages-item">
+            <h3 class="advantages-slogan">Strategy</h3>
+            <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
-          <li class="advances-section-list-item">
-            <h3 class="advances-section-list-item-slogan">Punctuality</h3>
-            <p class="advances-section-list-item-text">
+          <li class="advantages-item">
+            <h3 class="advantages-slogan">Punctuality</h3>
+            <p class="advantages-text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
-          <li class="advances-section-list-item">
-            <h3 class="advances-section-list-item-slogan">Diligence</h3>
-            <p class="advances-section-list-item-text">
+          <li class="advantages-item">
+            <h3 class="advantages-slogan">Diligence</h3>
+            <p class="advantages-text">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
-          <li class="advances-section-list-item">
-            <h3 class="advances-section-list-item-slogan">Technologies</h3>
-            <p class="advances-section-list-item-text">
+          <li class="advantages-item">
+            <h3 class="advantages-slogan">Technologies</h3>
+            <p class="advantages-text">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
